# emotion-music-generator

./: .gitattributes  .gitignore  APPLICATIONS.md  CMakeLists.txt  README.md  build.sh  devlog.md  download_models.sh  predict_emotion.py  project-qa.html  test_emotion.py
config/: config.yaml
docs/: AI对话记录.md  ai_usage.md  conversation_log.md  designed.md  git日志.html  perf.md  项目设计说明书.md
models/emotion_detector/: emotion_deploy.prototxt
models/face_detector/: deploy.prototxt
src/: emotion_test.cpp  main.cpp
src/audio/: audio_player.cpp  audio_player.h  local_music_player.cpp  local_music_player.h
src/detector/: emotion_recognizer.cpp  emotion_recognizer.h  face_detector.cpp  face_detector.h
src/generator/: music_generator.cpp  music_generator.h
src/logger/: emotion_logger.cpp  emotion_logger.h
src/mapper/: emotion_mapper.cpp  emotion_mapper.h
src/profiler/: perf_profiler.h
src/state/: shared_state.h
src/ui/: overlay_renderer.cpp  overlay_renderer.h
src/web/: web_resources.h  web_server.cpp  web_server.h
